Implemented GUI and error handling (#2)
* Tested and implemented IsLeapYear

* Implemented error handling

Co-authored-by: Sebastian Fugmann <sefu@itu.dk>

--- a/LeapYear.Tests/LeapYear.Tests.csproj
+++ b/LeapYear.Tests/LeapYear.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="BDSAAssignment0.csproj" />
+    <ProjectReference Include="..\LeapYear\LeapYear.csproj" />
   </ItemGroup>
 
 </Project>
